# py-patch-bzlmod

./: BUILD
client/: MODULE.bazel  greeting.patch
greeting/: BUILD  MODULE.bazel
greeting/golf/: greetings.py
